# td-farts

./: fp-lib-table  sym-lib-table  td-farts.kicad_pcb  td-farts.kicad_pro  td-farts.kicad_sch
td-farts-firmware/: CMakeLists.txt  Makefile  main.c
td-farts.pretty/: DIP-56_156.kicad_mod  JAMMA_Hirose_Edge.kicad_mod
